Align Big5 decoding with spec, Chrome, and Firefox https://bugs.webkit.org/show_bug.cgi?id=216016

Patch by Alex Christensen <achristensen@webkit.org> on 2020-09-01
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-decode-big5-hkscs-expected.txt:
* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-decode-cn-big5-expected.txt:
* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-decode-csbig5-expected.txt:
* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-decode-errors-expected.txt:
* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-decode-expected.txt:
* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-decode-extra-expected.txt:
* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-decode-x-x-big5-expected.txt:
* web-platform-tests/encoding/legacy-mb-tchinese/big5/big5-encode-form-big5-hkscs-expected.txt:

Source/WebCore:

I also introduce a new class TextCodecCJK instead of duct taping this into TextCodecICU.
Covered by web platform tests.

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* platform/text/EncodingTables.cpp:
* platform/text/EncodingTables.h:
* platform/text/TextCodecCJK.cpp: Added.
(WebCore::TextCodecCJK::TextCodecCJK):
(WebCore::TextCodecCJK::registerEncodingNames):
(WebCore::TextCodecCJK::registerCodecs):
(WebCore::eucJPEncode):
(WebCore::big5Encode):
(WebCore::appendDecimal):
(WebCore::urlEncodedEntityUnencodableHandler):
(WebCore::entityUnencodableHandler):
(WebCore::questionMarkUnencodableHandler):
(WebCore::Function<void):
(WebCore::big5DecodeIndex):
(WebCore::TextCodecCJK::big5Decode):
(WebCore::TextCodecCJK::decode):
(WebCore::TextCodecCJK::encode):
* platform/text/TextCodecCJK.h: Added.
* platform/text/TextCodecICU.cpp:
(WebCore::TextCodecICU::encode):
(WebCore::eucJPEncode): Deleted.
(WebCore::big5Encode): Deleted.
(WebCore::uncheckedAppendDecimal): Deleted.
(WebCore::urlEncodedEntityUnencodableHandler): Deleted.
(WebCore::entityUnencodableHandler): Deleted.
(WebCore::questionMarkUnencodableHandler): Deleted.
(WebCore::Function<void): Deleted.
* platform/text/TextEncodingRegistry.cpp:
(WebCore::extendTextCodecMaps):

Source/WTF:

* wtf/text/CodePointIterator.h:

Canonical link: https://commits.webkit.org/228830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266397 268f45cc-cd09-0410-ab3c-d52691b4dbfc